# mini-flash-attention

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
benchmark/: compare_decode.py  compare_prefill.py  decode.py  prefill.py  run.py
csrc/: api.cpp
csrc/mfa/: api.cpp  api.h  debug.cuh  decode.cuh  flash.cu  flash.h  fwd.cuh  gemm.cuh  main.cu  prefill.cuh  static_switch.h  traits.h  utils.cuh
mini_flash_attention/: _C.pyi  __init__.py  interface.py
scripts/: run_ncu.sh
tests/: test.py  test_arbitrary_seqlen.py  test_both_seqlens.py  test_causal.py  test_flash_decoding.py  test_gqa.py  test_mha.py  test_minimal.py  test_output_compare.py  test_varlen.py  test_varlen_block_table.py
